--- a/index.html
+++ b/index.html
@@ -1,34 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>PCCARE | Developer</title>
+  <title>PCCARE | AI Developer</title>
 
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
 
-  <!-- AOS Animation -->
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-
   <style>
     body {
       margin: 0;
-      background: black;
+      background: radial-gradient(circle at top, #0f0f2d, #000);
       color: white;
       font-family: 'Orbitron', sans-serif;
       overflow-x: hidden;
       cursor: none;
     }
 
-    h1 {
-      font-size: 60px;
-      text-align: center;
-      margin-top: 200px;
-    }
-
-    p {
-      text-align: center;
-      font-size: 20px;
-      color: gray;
+    canvas {
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: -1;
     }
 
     section {
@@ -37,58 +29,75 @@
       justify-content: center;
       align-items: center;
       flex-direction: column;
+      text-align: center;
     }
 
-    /* Custom Cursor */
+    h1 {
+      font-size: 60px;
+    }
+
+    .typing {
+      font-size: 25px;
+      margin-top: 20px;
+      color: #00f7ff;
+    }
+
+    .card {
+      backdrop-filter: blur(15px);
+      background: rgba(255,255,255,0.05);
+      border: 1px solid rgba(255,255,255,0.1);
+      padding: 30px;
+      border-radius: 20px;
+      width: 300px;
+      transition: 0.3s;
+    }
+
+    .card:hover {
+      transform: scale(1.1);
+      box-shadow: 0 0 30px #00f7ff;
+    }
+
     .cursor {
-      width: 20px;
-      height: 20px;
-      border: 2px solid white;
+      width: 15px;
+      height: 15px;
+      background: #00f7ff;
       border-radius: 50%;
       position: fixed;
       pointer-events: none;
       transform: translate(-50%, -50%);
-      transition: 0.1s;
-    }
-
-    .glow {
-      position: absolute;
-      width: 300px;
-      height: 300px;
-      background: radial-gradient(circle, #00f7ff55, transparent);
-      filter: blur(50px);
-      animation: float 6s infinite alternate ease-in-out;
-    }
-
-    @keyframes float {
-      from { transform: translateY(-50px); }
-      to { transform: translateY(50px); }
     }
   </style>
 </head>
 
 <body>
 
+<canvas id="stars"></canvas>
 <div class="cursor"></div>
-<div class="glow"></div>
 
 <section>
-  <h1 data-aos="zoom-in">PCCARE 🚀</h1>
-  <p data-aos="fade-up">Creative Developer | Future Software Engineer</p>
+  <h1>PCCARE 🤖</h1>
+  <div class="typing" id="typing"></div>
 </section>
 
 <section>
-  <h1 data-aos="fade-right">I Build Cool Stuff 💻</h1>
+  <div class="card">
+    <h2>About Me</h2>
+    <p>A passionate developer building futuristic animated experiences.</p>
+  </div>
 </section>
-
-<!-- GSAP -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-
-<!-- AOS -->
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
 <script>
-  AOS.init();
+  // Typing Effect
+  const text = "AI Developer | Future Engineer | Dream Big 🚀";
+  let i = 0;
+  function typeEffect() {
+    if (i < text.length) {
+      document.getElementById("typing").innerHTML += text.charAt(i);
+      i++;
+      setTimeout(typeEffect, 70);
+    }
+  }
+  typeEffect();
 
   // Custom Cursor
   const cursor = document.querySelector(".cursor");
@@ -97,13 +106,38 @@
     cursor.style.top = e.clientY + "px";
   });
 
-  // GSAP Intro Animation
-  gsap.from("h1", {
-    y: -100,
-    opacity: 0,
-    duration: 1.5,
-    ease: "power4.out"
-  });
+  // Star Background
+  const canvas = document.getElementById("stars");
+  const ctx = canvas.getContext("2d");
+  canvas.width = window.innerWidth;
+  canvas.height = window.innerHeight;
+
+  let stars = [];
+  for(let i=0;i<200;i++){
+    stars.push({
+      x: Math.random()*canvas.width,
+      y: Math.random()*canvas.height,
+      r: Math.random()*2
+    });
+  }
+
+  function drawStars(){
+    ctx.clearRect(0,0,canvas.width,canvas.height);
+    ctx.fillStyle="white";
+    stars.forEach(s=>{
+      ctx.beginPath();
+      ctx.arc(s.x,s.y,s.r,0,Math.PI*2);
+      ctx.fill();
+    });
+  }
+
+  function animate(){
+    stars.forEach(s=>s.y += 0.3);
+    drawStars();
+    requestAnimationFrame(animate);
+  }
+
+  animate();
 </script>
 
 </body>
