--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ p{
 
 <canvas id="bg"></canvas>
 
-<h1>PCCARE 🚀</h1>
+<h1> KUAMR SHIVAM 🚀</h1>
 <p>Creative Developer | Future Software Engineer</p>
 
 <div class="cursor"></div>
