--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ p{
 <canvas id="bg"></canvas>
 
 <h1> KUAMR SHIVAM 🚀</h1>
-<p>Creative Developer | Future Software Engineer</p>
+<p> CEO | Future Software Engineer</p>
 
 <div class="cursor"></div>
 
