--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@ p{
 
 <canvas id="bg"></canvas>
 
-<h1> RISMITHA S PARTNER SHIP WITH KUMAR SHIVAM </h1>
+<h1> RISMITHA S PARTNER SHIP
+  WITH KUMAR SHIVAM </h1>
 <p> CEO | Future Software Engineer</p>
 
 <div class="cursor"></div>
