--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ p{
 <canvas id="bg"></canvas>
 
 <h1> RISMITHA S weds
-  WITH KUMAR SHIVAM </h1>
+   KUMAR SHIVAM </h1>
 <p> CEO | Future Software Engineer</p>
 
 <div class="cursor"></div>
