--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ p{
 
 <canvas id="bg"></canvas>
 
-<h1> RISMITHA S weds
+<h1> RISMHITHA S weds
    KUMAR SHIVAM </h1>
 <p> CEO | Future Software Engineer</p>
 
