--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@ p{
 
 <canvas id="bg"></canvas>
 
-<h1> RISHMITHA S weds
-   KUMAR SHIVAM </h1>
+<h1> KUMAR SHIVAM weds
+   RISHMITHA SIVA  </h1>
 <p> CEO | Future Software Engineer</p>
 
 <div class="cursor"></div>
